change modifier class names & fix gulp images-task error

--- a/assets/src/styles/app.scss
+++ b/assets/src/styles/app.scss
@@ -2,7 +2,7 @@
 @import "bourbon";
 
 .title {
-    &.--main {
+    &.-main {
         font-family: 'QuboRegular';
         font-weight: normal;
         color: $color4;
